# evacuation-simulation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/evacuation_simulation/: __about__.py  __init__.py  __main__.py
src/evacuation_simulation/cli/: __init__.py
src/evacuation_simulation/core/: __init__.py  agent.py  envrionment.py
src/evacuation_simulation/map/: 2f_grid.csv  3f_grid.csv
